# github-tidy

./: .gitignore  README.md  claude_gemini_all_files.txt  claude_only_all_files.txt  combine-files.sh  deepseek_and_claude_all_files.txt  requirements.md
claude_and_gemini/: Makefile  README.md  pyproject.toml
claude_and_gemini/.github/workflows/: ci.yml
claude_and_gemini/src/github_branch_manager/: branch_manager.py  config.py  logger.py  main.py  notifier.py
claude_and_gemini/tests/: test_branch_manager.py  test_config.py  test_notifier.py
claude_and_gemini_and_o1_mini/: README.md  deploy.sh
claude_and_gemini_and_o1_mini/src/github_branch_manager/: branch_manager.py  config.py  main.py
claude_and_gemini_and_o1_mini/tests/: test_branch_manager.py  test_config.py  test_notifier.py
claude_only/: README.md  cloud-run-job.yaml
claude_only/docs/: claude_generated_core-files.txt  claude_generated_readme.md  claude_generated_remaining_components.txt  claude_results_1.md  claude_results_2.md  prompt_to_claude.txt
claude_only/tests/: test_branch_manager.py
deepseek_and_claude/: .env.example  Dockerfile  README.md  commands  pyproject.toml
deepseek_and_claude/docs/: claude_generated_artifact.txt  claude_results.md  deepseek_results.md  deepseek_thinking.md  prompt_to_claude.md  prompt_to_deepseek.md
deepseek_and_claude/scripts/: deploy.sh  setup_gcp.sh
deepseek_and_claude/src/: branch_manager.py  config.py  github_client.py  main.py  notifier.py
per_gemini/: final_score.md  prompt.txt  response.md
per_gpt_o1_mini/: response.md
(+4 files in other folders)
